[gd_scene load_steps=6 format=2]

[ext_resource path="res://menu/main-menu/ui/ui.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/fonts/montserrat_eb_16.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/ui/fonts/montserrat_eb_32.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/ui/bar/hp_bar.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/server-browser/server_browser.tscn" type="PackedScene" id=5]

[node name="ui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="main_menu_control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/main_menu_control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/main_menu_control/HBoxContainer"]
margin_right = 338.0
margin_bottom = 600.0
size_flags_horizontal = 3

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/main_menu_control/HBoxContainer"]
margin_left = 342.0
margin_right = 681.0
margin_bottom = 600.0
size_flags_horizontal = 3

[node name="MarginContainer4" type="MarginContainer" parent="CanvasLayer/main_menu_control/HBoxContainer"]
margin_left = 685.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3

[node name="TextureRect" type="ColorRect" parent="CanvasLayer/main_menu_control/HBoxContainer/MarginContainer4"]
margin_right = 339.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 0.882353 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/main_menu_control/HBoxContainer/MarginContainer4"]
margin_right = 339.0
margin_bottom = 600.0

[node name="MarginContainer4" type="MarginContainer" parent="CanvasLayer/main_menu_control/HBoxContainer/MarginContainer4/HBoxContainer"]
margin_right = 20.0
margin_bottom = 600.0
rect_min_size = Vector2( 20, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/main_menu_control/HBoxContainer/MarginContainer4/HBoxContainer"]
margin_left = 24.0
margin_right = 315.0
margin_bottom = 600.0
size_flags_horizontal = 3
alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/main_menu_control/HBoxContainer/MarginContainer4/HBoxContainer/VBoxContainer"]
margin_right = 291.0
margin_bottom = 304.0
size_flags_vertical = 3

[node name="host_button" type="Button" parent="CanvasLayer/main_menu_control/HBoxContainer/MarginContainer4/HBoxContainer/VBoxContainer"]
margin_top = 308.0
margin_right = 291.0
margin_bottom = 388.0
rect_min_size = Vector2( 0, 80 )
flat = true

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/main_menu_control/HBoxContainer/MarginContainer4/HBoxContainer/VBoxContainer/host_button"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.129412, 0.129412, 0.129412, 1 )

[node name="Label" type="Label" parent="CanvasLayer/main_menu_control/HBoxContainer/MarginContainer4/HBoxContainer/VBoxContainer/host_button"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "Host"
align = 1
valign = 1

[node name="MarginContainer3" type="MarginContainer" parent="CanvasLayer/main_menu_control/HBoxContainer/MarginContainer4/HBoxContainer/VBoxContainer"]
margin_top = 392.0
margin_right = 291.0
margin_bottom = 412.0
rect_min_size = Vector2( 0, 20 )

[node name="join_button" type="Button" parent="CanvasLayer/main_menu_control/HBoxContainer/MarginContainer4/HBoxContainer/VBoxContainer"]
margin_top = 416.0
margin_right = 291.0
margin_bottom = 496.0
rect_min_size = Vector2( 0, 80 )
flat = true

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/main_menu_control/HBoxContainer/MarginContainer4/HBoxContainer/VBoxContainer/join_button"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.129412, 0.129412, 0.129412, 1 )

[node name="Label" type="Label" parent="CanvasLayer/main_menu_control/HBoxContainer/MarginContainer4/HBoxContainer/VBoxContainer/join_button"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "Join"
align = 1
valign = 1

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/main_menu_control/HBoxContainer/MarginContainer4/HBoxContainer/VBoxContainer"]
margin_top = 500.0
margin_right = 291.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 100 )

[node name="MarginContainer3" type="MarginContainer" parent="CanvasLayer/main_menu_control/HBoxContainer/MarginContainer4/HBoxContainer"]
margin_left = 319.0
margin_right = 339.0
margin_bottom = 600.0
rect_min_size = Vector2( 20, 0 )

[node name="lobby_menu_control2" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/lobby_menu_control2"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/lobby_menu_control2/HBoxContainer"]
margin_right = 338.0
margin_bottom = 600.0
size_flags_horizontal = 3

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/lobby_menu_control2/HBoxContainer"]
margin_left = 342.0
margin_right = 681.0
margin_bottom = 600.0
size_flags_horizontal = 3

[node name="MarginContainer4" type="MarginContainer" parent="CanvasLayer/lobby_menu_control2/HBoxContainer"]
margin_left = 685.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3

[node name="TextureRect" type="ColorRect" parent="CanvasLayer/lobby_menu_control2/HBoxContainer/MarginContainer4"]
margin_right = 339.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 0.882353 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/lobby_menu_control2/HBoxContainer/MarginContainer4"]
margin_right = 339.0
margin_bottom = 600.0

[node name="MarginContainer4" type="MarginContainer" parent="CanvasLayer/lobby_menu_control2/HBoxContainer/MarginContainer4/HBoxContainer"]
margin_right = 20.0
margin_bottom = 600.0
rect_min_size = Vector2( 20, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/lobby_menu_control2/HBoxContainer/MarginContainer4/HBoxContainer"]
margin_left = 24.0
margin_right = 315.0
margin_bottom = 600.0
size_flags_horizontal = 3
alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/lobby_menu_control2/HBoxContainer/MarginContainer4/HBoxContainer/VBoxContainer"]
margin_right = 291.0
margin_bottom = 216.0
size_flags_vertical = 3

[node name="seed" type="TextEdit" parent="CanvasLayer/lobby_menu_control2/HBoxContainer/MarginContainer4/HBoxContainer/VBoxContainer"]
margin_top = 220.0
margin_right = 291.0
margin_bottom = 280.0
rect_min_size = Vector2( 0, 60 )
custom_fonts/font = ExtResource( 2 )
text = "1"

[node name="MarginContainer4" type="MarginContainer" parent="CanvasLayer/lobby_menu_control2/HBoxContainer/MarginContainer4/HBoxContainer/VBoxContainer"]
margin_top = 284.0
margin_right = 291.0
margin_bottom = 304.0
rect_min_size = Vector2( 0, 20 )

[node name="play_button" type="Button" parent="CanvasLayer/lobby_menu_control2/HBoxContainer/MarginContainer4/HBoxContainer/VBoxContainer"]
margin_top = 308.0
margin_right = 291.0
margin_bottom = 388.0
rect_min_size = Vector2( 0, 80 )
flat = true

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/lobby_menu_control2/HBoxContainer/MarginContainer4/HBoxContainer/VBoxContainer/play_button"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.129412, 0.129412, 0.129412, 1 )

[node name="Label" type="Label" parent="CanvasLayer/lobby_menu_control2/HBoxContainer/MarginContainer4/HBoxContainer/VBoxContainer/play_button"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "Play"
align = 1
valign = 1

[node name="MarginContainer3" type="MarginContainer" parent="CanvasLayer/lobby_menu_control2/HBoxContainer/MarginContainer4/HBoxContainer/VBoxContainer"]
margin_top = 392.0
margin_right = 291.0
margin_bottom = 412.0
rect_min_size = Vector2( 0, 20 )

[node name="leave_button" type="Button" parent="CanvasLayer/lobby_menu_control2/HBoxContainer/MarginContainer4/HBoxContainer/VBoxContainer"]
margin_top = 416.0
margin_right = 291.0
margin_bottom = 496.0
rect_min_size = Vector2( 0, 80 )
flat = true

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/lobby_menu_control2/HBoxContainer/MarginContainer4/HBoxContainer/VBoxContainer/leave_button"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.129412, 0.129412, 0.129412, 1 )

[node name="Label" type="Label" parent="CanvasLayer/lobby_menu_control2/HBoxContainer/MarginContainer4/HBoxContainer/VBoxContainer/leave_button"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "Leave"
align = 1
valign = 1

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/lobby_menu_control2/HBoxContainer/MarginContainer4/HBoxContainer/VBoxContainer"]
margin_top = 500.0
margin_right = 291.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 100 )

[node name="MarginContainer3" type="MarginContainer" parent="CanvasLayer/lobby_menu_control2/HBoxContainer/MarginContainer4/HBoxContainer"]
margin_left = 319.0
margin_right = 339.0
margin_bottom = 600.0
rect_min_size = Vector2( 20, 0 )

[node name="server_browser" parent="CanvasLayer" instance=ExtResource( 5 )]
visible = false

[node name="loading" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/loading"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/loading/VBoxContainer"]
margin_top = 238.0
margin_right = 1024.0
margin_bottom = 278.0
custom_fonts/font = ExtResource( 3 )
text = "Loading..."
align = 1

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/loading/VBoxContainer"]
margin_top = 282.0
margin_right = 1024.0
margin_bottom = 307.0
rect_min_size = Vector2( 0, 25 )

[node name="loading_bar" parent="CanvasLayer/loading/VBoxContainer" instance=ExtResource( 4 )]
margin_left = 312.0
margin_top = 311.0
margin_right = 712.0
margin_bottom = 361.0
rect_min_size = Vector2( 400, 50 )
size_flags_horizontal = 4

[connection signal="pressed" from="CanvasLayer/main_menu_control/HBoxContainer/MarginContainer4/HBoxContainer/VBoxContainer/host_button" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="CanvasLayer/main_menu_control/HBoxContainer/MarginContainer4/HBoxContainer/VBoxContainer/join_button" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="CanvasLayer/lobby_menu_control2/HBoxContainer/MarginContainer4/HBoxContainer/VBoxContainer/play_button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="CanvasLayer/lobby_menu_control2/HBoxContainer/MarginContainer4/HBoxContainer/VBoxContainer/leave_button" to="." method="_on_leave_button_pressed"]
[connection signal="on_join" from="CanvasLayer/server_browser" to="." method="_on_server_browser_on_join"]
